# strike

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  canister_ids.json  dfx.json  package.json  rust-toolchain.toml  turbo.json
apps/chrome-extension/: package.json  vite.config.ts
apps/chrome-extension/src/: background.ts  contentScript.ts  manifest.ts
apps/site/: .env.example  .prettierignore  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
canisters/blinks_icp/: Cargo.toml  blinks_icp.did
canisters/blinks_icp/src/: lib.rs
canisters/hello/: Cargo.toml  hello.did
canisters/strike/: Cargo.toml  strike.did
canisters/strike/src/: guards.rs  lifecycle.rs  strike.rs  test.rs
canisters/strike/src/lifecycle/: init.rs  pre_upgrade.rs
canisters/strike_backend/: Cargo.toml
docs/: README.md  SUMMARY.md  actions.md  betbtc-settings.md  how-strike-works.md  installation-and-setup.md  key-components.md  platform-architecture.md  privacy-policy.md  referral-process.md  rules-and-guidelines.md
docs/market-mechanics/: README.md  how-betbtc-prediction-market-works.md  price-dynamics.md
docs/quickstart-guide/: how-to-connect-wallet.md  how-to-deposit-funds-into-your-wallet.md  how-to-earn-referral-points.md  how-to-log-in-to-betbtc.md  how-to-place-bets.md  how-to-transfer-funds-on-betbtc.md  how-to-use-the-activity-section.md  how-to-withdraw-funds-from-betbtc.md
docs/roadmap/: phase-1-initial-launch.md  phase-2-market-expansion.md
scripts/: download-pocket-ic.sh  generate-did.sh  seed.sh
(+65 files in other folders)
