[package]
name = "blinks_icp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ciborium = "0.2.1"
ic-cdk = "0.15.0"
ic-stable-structures = "0.6.5"
serde = "1.0.207"
# http = "1.1.0"
